// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionList > Comment renders UserBlock content normally 1`] = `
<div>
  <div
    class="mc-c-knJJIL"
  >
    <span
      class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-lhlSdI-size-sm mc-c-kEyFKe-ibPjhUn-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="mc-c-IzVos"
    >
      <div>
        <span
          class="mc-c-fiTErs"
        >
          name
        </span>
        <span
          class="mc-c-bElyeM"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="mc-c-lbvXeI"
      >
        <span
          class="mc-c-dUBPbm"
        >
          <span
            class="mc-c-khUlPc mc-c-khUlPc-iJVNBC-size-sm"
          >
            @
            name
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders paragraph content normally 1`] = `
<div>
  <div
    class="mc-c-knJJIL"
  >
    <span
      class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-lhlSdI-size-sm mc-c-kEyFKe-ibPjhUn-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="mc-c-IzVos"
    >
      <div>
        <span
          class="mc-c-fiTErs"
        >
          name
        </span>
        <span
          class="mc-c-bElyeM"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="mc-c-lbvXeI"
      >
        <p>
          <span>
            text
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders text content normally 1`] = `
<div>
  <div
    class="mc-c-knJJIL"
  >
    <span
      class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-lhlSdI-size-sm mc-c-kEyFKe-ibPjhUn-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="mc-c-IzVos"
    >
      <div>
        <span
          class="mc-c-fiTErs"
        >
          name
        </span>
        <span
          class="mc-c-bElyeM"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="mc-c-lbvXeI"
      >
        <span>
          text
        </span>
      </div>
    </div>
  </div>
</div>
`;
